# reelscraper

./: DOCS.md  README.md  build.sh  code_coverage.py  main.py  make_tests.py  pyproject.toml  scraper.db
.github/workflows/: coverage.yml  pypi-publish.yml  release-on-tag.yml  tests.yml
src/instascraper/: __init__.py  insta_scraper.py  multi_insta_scraper.py
src/reelscraper/: DOCS.md  reel_multi_scraper.py
src/reelscraper/utils/: __init__.py  instagram_api.py  logger_manager.py
src/reelscraper/utils/database/: db_base.py  db_manager.py
tests/: __init__.py  test_account_manager.py  test_db_manager.py  test_instagram_api.py  test_logger_manager.py  test_reel_multi_scraper.py  test_reel_scraper.py  test_video_extractor.py
