[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "reelscraper"
version = "1.1.2"
description = "A convenient way to harvest Reels data without breaking a sweat—or Instagram's TOS"
authors = [
    { name="Andrea Zorzi", email="zorzi.andrea@outlook.com" }
]
readme = "README.md"
license = { text="LICENSE.txt" }
requires-python = ">=3.11.9"
keywords = [
    "instagram",
    "scraper",
    "reels"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dynamic = ["dependencies"]


[project.urls]
"Home" = "https://github.com/andreaaazo/reelscraper"
"Bug Tracker" = "https://github.com/andreaaazo/reelscraper/issues"
"Documentation" = "https://github.com/andreaaazo/reelscraper/blob/master/README.md"


[project.scripts]
reelscraper = "instascraper.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["reelscraper"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }